examples/test/testpolicy8917.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8917
  namespace: namespace498
spec:
  podSelector:
    matchLabels:
      key24: value48
      key21: value6
      key31: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value46
          key23: value44
      podSelector:
        matchLabels:
          key39: value23
          key21: value6
          key6: value35
